--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,4 +1,4 @@
-title = "My Docs"
+title = "VIVA CITY Knowledge Base"
 baseurl = "http://localhost/"
 canonifyURLs = false
 disableAliases = true
@@ -17,7 +17,7 @@ defaultContentLanguage = "en"
 disableLanguages = ["de", "nl"]
 defaultContentLanguageInSubdir = false
 
-copyRight = "Copyright (c) 2020-2024 Hyas"
+copyRight = "Copyright (c) 2024 VIVA CITY TECHNOLOGIES LIMITED"
 
 [build.buildStats]
   enable = true
