--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 # Hugo
-title = "My Docs"
+title = "VIVA CITY Knowledge Base"
 description = "Congrats on setting up a new Doks project!"
 images = ["cover.png"]
 
